# iac

./: .env.example  .gitignore  AGENTS.md  B2-TFSTATE-MIGRATION.md  INSTRUCTIONS.md  README.md  pyproject.toml
ansible/: inventory.ini.example  playbook.yml  requirements.yml
ansible/templates/: Caddyfile.j2
docs/superpowers/specs/: 2026-07-13-backblaze-offsite-backup-design.md
scripts/: migrate-tfstate-to-b2.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
