[project]
name = "iac"
version = "0.1.0"
description = "GitOps-driven Mailcow + Caddy on Hetzner Cloud — IaC toolchain"
# Pinned to the 3.13 minor: newest CPython still in bugfix maintenance that is
# supported as an ansible-core 2.21 control node (3.12 is security-only).
requires-python = ">=3.13,<3.14"

dependencies = [
    "ansible>=9.6",
    "ansible-lint>=24.5",
    # ansible.utils ipaddr filter (used by the mailcow.mailcow role)
    "netaddr>=1.3",
]

[tool.uv]
# Pin the resolver to a deterministic algorithm
resolution = "highest"
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
